--- a/TypedUserDefaults.xcodeproj/xcshareddata/xcschemes/TypedUserDefaults.xcscheme
+++ b/TypedUserDefaults.xcodeproj/xcshareddata/xcschemes/TypedUserDefaults.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "0900"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "TypedUserDefaults::TypedUserDefaults"
+               BlueprintIdentifier = "0DE6B26F1F97FE600056BA5A"
                BuildableName = "TypedUserDefaults.framework"
                BlueprintName = "TypedUserDefaults"
                ReferencedContainer = "container:TypedUserDefaults.xcodeproj">
@@ -33,13 +33,22 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "TypedUserDefaults::TypedUserDefaultsTests"
+               BlueprintIdentifier = "0DE6B2781F97FE600056BA5A"
                BuildableName = "TypedUserDefaultsTests.xctest"
                BlueprintName = "TypedUserDefaultsTests"
                ReferencedContainer = "container:TypedUserDefaults.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0DE6B26F1F97FE600056BA5A"
+            BuildableName = "TypedUserDefaults.framework"
+            BlueprintName = "TypedUserDefaults"
+            ReferencedContainer = "container:TypedUserDefaults.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -57,7 +66,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "TypedUserDefaults::TypedUserDefaults"
+            BlueprintIdentifier = "0DE6B26F1F97FE600056BA5A"
             BuildableName = "TypedUserDefaults.framework"
             BlueprintName = "TypedUserDefaults"
             ReferencedContainer = "container:TypedUserDefaults.xcodeproj">
@@ -72,6 +81,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0DE6B26F1F97FE600056BA5A"
+            BuildableName = "TypedUserDefaults.framework"
+            BlueprintName = "TypedUserDefaults"
+            ReferencedContainer = "container:TypedUserDefaults.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
